--- a/.netinfo.yml
+++ b/.netinfo.yml
@@ -1,5 +1,6 @@
 nova:
   val_addr: "novavaloper18hcuafd3849v4deyyazn6k32ze9msyqs2xgvjh"
+  target_addr: "nova1z36nmc2efth7wy3dcnjsw2tu83qn5mxyydu663"
   local_addr: "nova1lds58drg8lvnaprcue2sqgfvjnz5ljlkq9lsyf"
 atom:
   local_addr: "cosmos1spcw85a6qm98uhagecfspvt2r5px2jzkdcy9mt"
