ci: add golangci-lint

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,26 +15,32 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [amd64]
-        os: [darwin, linux]
+        arch: [ amd64 ]
+        os: [ darwin, linux ]
         include:
           - os: darwin
             arch: arm64
     name: ${{ matrix.arch }} for ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: '1.18'
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: ${{ matrix.arch }}
           GOPRIVATE: github.com/Carina-labs
-
+      - uses: actions/checkout@v3
+      - uses: technote-space/get-diff-action@v6
+        with:
+          PATTERNS: |
+            **/*.go
+            !**/*_test.go
+          FILES: |
+            go.mod
+            go.sum
       - name: Build bot
         run: |
           git config --global url."https://${{ env.USER_NAME }}:${{ secrets.HAL_ACT }}@github.com".insteadOf "https://github.com"
           go mod download
-          make all
-          
+          make build
+        if: env.GIT_DIFF
