ci: set `skip-cache` on golangci-lint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,4 +29,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.46.2
+          skip-cache: true
         if: env.GIT_DIFF
