--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,10 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: '1.18'
+          go-version: 1.21
         env:
           GOOS: ${{ matrix.os }}
           GOARCH: ${{ matrix.arch }}
-          GOPRIVATE: github.com/Carina-labs
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
         with:
@@ -40,7 +39,6 @@ jobs:
             go.sum
       - name: Build bot
         run: |
-          git config --global url."https://${{ env.USER_NAME }}:${{ secrets.HAL_ACT }}@github.com".insteadOf "https://github.com"
           go mod download
           make build
         if: env.GIT_DIFF
